# Galunga

./: CMakeLists.txt  README.md
data/assets/shaders/: QuadBatched.vert.glsl
include/: Application.h  Gassert.h  Renderer.h
src/: Application.cpp  Application.h  Gassert.h  Platform.cpp  Renderer.cpp  Renderer.h  TextureManager.cpp  main.cpp
src/client/: Application.cpp  Application.h  ApplicationClient.cpp  ApplicationClient.h  Input.cpp  Input.h  MainClient.cpp  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  main.cpp
src/client/ecs/components/: DebugDraw.h
src/client/ecs/systems/: DebugSystem.cpp  DebugSystem.h  RenderingSystem.cpp  RenderingSystem.h
src/client/net/: Host.cpp  Host.h  NetworkClient.cpp
src/net/: NetEvents.h  Player.h
src/net/client/: ApplicationClient.cpp  ApplicationClient.h  GameClient.h  MainClient.cpp  NetworkClient.cpp  NetworkClient.h
src/net/server/: ApplicationServer.cpp  ApplicationServer.h  MainServer.cpp  NetworkServer.cpp  NetworkServer.h
src/server/: Application.cpp  Application.h  ApplicationServer.cpp  MainServer.cpp  main.cpp
src/server/net/: Host.cpp  Host.h
src/shared/: GAssert.h  Platform.cpp  Platform.h
src/shared/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/shared/ecs/components/: Delete.h  Lifetime.h
src/shared/ecs/components/core/: Collider.h  Lifetime.h  Sprite.h  Tag.h  Transform.h
src/shared/ecs/components/game/: Bullet.h  Enemy.h  Player.h
src/shared/ecs/events/: AddSprite.h  AxisBindingBase.h  Collision.h
src/shared/ecs/events/game/: PlayerEvents.h
src/shared/ecs/systems/: System.cpp  System.h
src/shared/ecs/systems/core/: CollisionSystem.cpp  CollisionSystem.h  LifetimeSystem.cpp  LifetimeSystem.h
src/shared/ecs/systems/game/: BulletSystem.cpp  BulletSystem.h  PlayerSystem.cpp  PlayerSystem.h
src/shared/net/: Address.h  NetEvents.h  Player.h
src/shared/utils/: EventBus.h  Timer.h
src/utils/: EventBus.h  Timer.h
